======
1.60.0
======

* Removed windows phar version.
* Fixed issue #105: Run without phar extension

======
1.59.1
======

* Maintenance release for missing class in phar file.

======
1.59.0
======

* Fix for issue #95 - customer:create enforces password with at least one digit for frontend customers
* db:dump command -> Added new --force and --print-only-filename options.
* Added more unit test tests
* Fixed warning in cron:history command.

======
1.58.0
======

* Issue #87 - Add option to create magento module with sql folder
   - new option --add-setup for dev:module:create command
* dev:log:size command - Do not prompt if no log file exists.
* Moved composer from src folder in vendor (update with composer.phar)