@@ -1,1 +1,1 @@
-1.59.1
+1.60.0
